FIX problems with the path