@@ -11,9 +11,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Collection;
@@ -74,9 +72,10 @@ public class RssArticlesUploader {
                 );
 
         for (Map.Entry<CategoryFeeKey, List<RssArticleCloud>> entryItem : rssMap.entrySet()) {
-            String pathInCloud = basePathFiles + entryItem.getKey().getTypeInfoEnum().name().toLowerCase(Locale.ENGLISH) + File.separator +
-                    reportDate.format(DateTimeFormatter.ofPattern("yyyy_MM_dd")) + File.separator +
-                    entryItem.getKey().getCategoryId() + File.separator + entryItem.getKey().getFeedId() + File.separator;
+            Path pathInCloud = Path.of(basePathFiles, entryItem.getKey().getTypeInfoEnum().name().toLowerCase(Locale.ENGLISH),
+                    reportDate.format(DateTimeFormatter.ofPattern("yyyy_MM_dd")),
+                    String.valueOf(entryItem.getKey().getCategoryId()),
+                    String.valueOf(entryItem.getKey().getFeedId()));
             try {
                 cloudSender.upload(pathInCloud, objectMapper.writeValueAsString(entryItem.getValue()), fileName);
             } catch (JsonProcessingException e) {
@@ -114,9 +113,8 @@ public class RssArticlesUploader {
      * @return OperationResult: success/failure.
      */
     private OperationResult deleteOldData(LocalDateTime reportDate) {
-        Path entryPath = Paths.get(basePathFiles + File.separator + articles
-                + File.separator + reportDate.format(DateTimeFormatter.ofPattern("yyyy_MM_dd"))
-        );
+        Path entryPath = Path.of(basePathFiles, articles,
+                reportDate.format(DateTimeFormatter.ofPattern("yyyy_MM_dd")));
 
         return cloudSender.deleteItems(entryPath);
     }
